# decay-scheme-drawer

./: .gitignore  8He_decay_schema.py  README.md  decay_scheme_classes.py  decay_scheme_drawer.py  example1_21mg.ipynb  example1_21mg.py  example2_12c.ipynb  example2_12c.py  example3_8be.ipynb  example3_8be.py  example4_21mg_v2.ipynb  example4_21mg_v2.py  example6_12c_v2.py  example7_8he.ipynb  example7_8he.py  example8_8he_v2.py  my_decay_scheme.ipynb  my_decay_scheme.py  pyproject.toml
decay_scheme/: __init__.py  decay_scheme_classes.py  decay_scheme_drawer.py
examples/: README.md  example1_21mg.ipynb  example1_21mg.py  example2_12c.ipynb  example2_12c.py  example3_8be.ipynb  example3_8be.py  example4_21mg_v2.ipynb  example5_21mg_v3.ipynb  example5_21mg_v3.py  example6_12c_v2.ipynb  example7_8he.ipynb  example8_8he_v2.ipynb  example9_20ne.ipynb  example9_20ne.py
