[tool.poetry]
name = "dec-sd"
version = "2.0.0-alpha.0"
description = "A python package to draw nuclear decay schemas"
authors = ["Erik Asbjørn Mikkelsen Jensen <ej@phys.au.dk>", Mads Hansen Baattrup <mads@baattrup.com>"]
readme = "README.md"
packages = [{include = "decay_scheme"},
			{include = "fonts"},]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7.1"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
